@@ -291,6 +291,12 @@ class TestRedirectsIndexView(TestCase, WagtailTestUtils):
         self.assertEqual(response.status_code, 200)
         self.assertEqual(response.context['query_string'], "Hello")
 
+    def test_search_results(self):
+        models.Redirect.objects.create(old_path="/aaargh", redirect_link="http://torchbox.com/")
+        models.Redirect.objects.create(old_path="/torchbox", redirect_link="http://aaargh.com/")
+        response = self.get({'q': "aaargh"})
+        self.assertEqual(len(response.context['redirects']), 2)
+
     def test_pagination(self):
         pages = ['0', '1', '-1', '9999', 'Not a page']
         for page in pages:
